# how_wrong_is_your_mmm

./: .gitignore  LICENSE  NOTES.md  README.md  _dgp.py  mkdocs.yml  pyproject.toml
docs/: cmo.html  guide.html  introduction.html  research.html
docs/api/: 404.html  index.html  objects.inv  sitemap.xml
docs/api/api/dgp/: index.html
docs/api/api/diagnostic/: index.html
docs/api/api/mmm/: index.html
docs/api/api/phaser/: index.html
docs/api/search/: search_index.json
mkdocs_src/: index.md
mkdocs_src/api/: dgp.md  diagnostic.md  mmm.md  phaser.md
notebooks/: 01_dgp_diagnostic_walkthrough.ipynb  02_perturber_walkthrough.ipynb  02_phaser_walkthrough.ipynb  03_time_to_benefit.ipynb  04_channel_count_sweep.ipynb  05_bayesian_comparison.ipynb
src/how_wrong_is_your_mmm/: __init__.py  _dgp.py  _diagnostic.py  _mmm.py  _perturber.py  _phaser.py
tests/: test_dgp.py  test_diagnostic.py  test_mmm.py  test_perturber.py  test_phaser.py
