[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "how-wrong-is-your-mmm"
version = "0.1.0"
description = "Collinearity diagnostics and budget perturbation tools for Marketing Mix Models"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ryan O'Sullivan", email = "raz1470@hotmail.co.uk" }]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/how_wrong_is_your_mmm"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=how_wrong_is_your_mmm --cov-report=term-missing"
