[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "how-wrong-is-your-mmm"
version = "0.1.0"
description = "Collinearity diagnostics and budget perturbation tools for Marketing Mix Models"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ryan O'Sullivan", email = "raz1470@hotmail.co.uk" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/how_wrong_is_your_mmm"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E501", "E402", "RUF001", "RUF002", "I001", "F401", "F811", "F541", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=how_wrong_is_your_mmm --cov-report=term-missing"
