[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "how-wrong-is-your-mmm"
version = "0.1.0"
description = "Collinearity diagnostics and budget phasing tools for Marketing Mix Models"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ryan O'Sullivan", email = "raz1470@hotmail.co.uk" }]
requires-python = ">=3.12"
keywords = [
    "marketing-mix-modeling",
    "mmm",
    "collinearity",
    "econometrics",
    "marketing-analytics",
    "bayesian",
    "media-planning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://raz1470.github.io/how_wrong_is_your_mmm/introduction.html"
Repository = "https://github.com/raz1470/how_wrong_is_your_mmm"
Documentation = "https://raz1470.github.io/how_wrong_is_your_mmm/api/"
Research = "https://raz1470.github.io/how_wrong_is_your_mmm/research.html"

[dependency-groups]
dev = [
    "arviz>=0.18,<0.24",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pre-commit>=3.0",
    "pymc>=5.16,<5.26",
    "pytensor>=2.22",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/how_wrong_is_your_mmm"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E501", "E402", "RUF001", "RUF002", "I001", "F401", "F811", "F541", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=how_wrong_is_your_mmm --cov-report=term-missing"
